Working on register Previous commit before setting scss as default

--- a/src/frontend/src/app/components/register/register.component.html
+++ b/src/frontend/src/app/components/register/register.component.html
@@ -1,3 +1,12 @@
 <div class="register-container">
-    <h1>TATA</h1>
+    <mat-card class="register-card">
+        <div class="image-container">
+            <h2>Welcome!!</h2>
+            <img src="/assets/illustrations/register.svg">
+        </div>
+        <div class="form-container">
+            
+        </div>
+    </mat-card>
+      
 </div>
