--- a/src/frontend/src/app/app.component.html
+++ b/src/frontend/src/app/app.component.html
@@ -14,7 +14,7 @@
     </div>
       
   </mat-toolbar>
-  <div class="router-container" style="background-color: aqua;">
+  <div class="router-container">
     <router-outlet></router-outlet>
   </div>
 </div>
