--- a/src/frontend/src/app/components/register/register.component.css
+++ b/src/frontend/src/app/components/register/register.component.css
@@ -6,3 +6,27 @@
     justify-content: center;
 }
 
+.register-card{
+    height: 60%;
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+}
+
+.image-container{
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.image-container img{
+    height: 70%;
+    width: 70%;
+}
+
+.form-container{
+    width: 40%;
+    background-color: aqua;
+}
