--- a/src/frontend/src/app/app.component.html
+++ b/src/frontend/src/app/app.component.html
@@ -5,10 +5,10 @@
     </button>
     <span [routerLink]="['']">Deepscheduler</span>
     <span class="navbar-spacer"></span>
-    <div *ngIf="userAuth" id="toolbar-user-container">
-      <span>User id</span>
+    <div *ngIf="isUserLoggedIn" id="toolbar-user-container">
+      <span>{{username}}</span>
     </div>
-    <div *ngIf="!userAuth" id="toolbar-login-container">
+    <div *ngIf="!isUserLoggedIn" id="toolbar-login-container">
       <button class="navbar-button" mat-button (click)="loginClicked()">Login</button>
       <button class="navbar-button" mat-raised-button (click)="registerClicked()">Register</button>
     </div>
