--- a/src/frontend/src/app/components/register/register.component.html
+++ b/src/frontend/src/app/components/register/register.component.html
@@ -4,22 +4,31 @@
             <img src="/assets/illustrations/register.svg">
         </div>
         <div class="form-container">
-            <form>
+            <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+
                 <mat-form-field appearance="outline">
+                    <mat-label>Enter your username</mat-label>
+                    <input matInput placeholder="username" required formControlName="username">
+                    <mat-error>Error</mat-error>
+
+                </mat-form-field><mat-form-field appearance="outline">
                     <mat-label>Enter your email</mat-label>
-                    <input matInput placeholder="pat@example.com" required>
+                    <input matInput placeholder="pat@example.com" type="email" required formControlName="mail">
                     <mat-error>Error</mat-error>
                 </mat-form-field>
+
                 <mat-form-field appearance="outline">
                     <mat-label>Enter your password</mat-label>
-                    <input matInput type="password" required>
+                    <input matInput type="password" required formControlName="password">
                     <mat-error>Error</mat-error>
                 </mat-form-field>
+
                 <mat-form-field appearance="outline">
                     <mat-label>Repeat your password</mat-label>
-                    <input matInput type="password" required>
+                    <input matInput type="password" required formControlName="passwordValidate">
                     <mat-error>Error</mat-error>
                 </mat-form-field>
+
                 <button mat-stroked-button type="submit">Register</button>
             </form>
         </div>
