Working on error messages from backend. Msg value is ovrewitten with default values

--- a/src/frontend/src/app/components/auth/register/register.component.html
+++ b/src/frontend/src/app/components/auth/register/register.component.html
@@ -9,24 +9,24 @@
                 <mat-form-field appearance="outline">
                     <mat-label>Enter your username</mat-label>
                     <input matInput placeholder="username" required formControlName="username">
-                    <mat-error>{{errorMsg.username}}</mat-error>
+                    <mat-error>Error</mat-error>
 
                 </mat-form-field><mat-form-field appearance="outline">
                     <mat-label>Enter your email</mat-label>
                     <input matInput placeholder="pat@example.com" type="email" required formControlName="mail">
-                    <mat-error>{{errorMsg.mail}}</mat-error>
+                    <mat-error>Error</mat-error>
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
                     <mat-label>Enter your password</mat-label>
                     <input matInput type="password" required formControlName="password">
-                    <mat-error>{{errorMsg.password}}</mat-error>
+                    <mat-error>Error</mat-error>
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
                     <mat-label>Repeat your password</mat-label>
                     <input matInput type="password" required formControlName="passwordValidate">
-                    <mat-error>{{errorMsg.passwordValidate}}</mat-error>
+                    <mat-error>Error</mat-error>
                 </mat-form-field>
 
                 <button mat-stroked-button type="submit">Register</button>
