--- a/src/frontend/src/app/components/utils/error-dialog/error-dialog.component.html
+++ b/src/frontend/src/app/components/utils/error-dialog/error-dialog.component.html
@@ -1,6 +1,7 @@
 <h3 mat-dialog-title>Error</h3>
 <mat-dialog-content class="mat-typography">
   <p>{{errorMsg}}</p>
+  <img class="error-dialog-img" src="/assets/illustrations/error.svg">
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <!--<button mat-button mat-dialog-close>Cancel</button>-->
