--- a/src/frontend/src/app/components/auth/login/login.component.html
+++ b/src/frontend/src/app/components/auth/login/login.component.html
@@ -14,6 +14,10 @@
                 </mat-form-field>
                 <button mat-stroked-button type="submit">Login</button>
             </form>
+            <button class="login-google" mat-stroked-button (click)="onLoginGoogle()">
+                <mat-icon style="width: 50px; height:30px"
+              svgIcon="logo"></mat-icon>
+                Login with google</button>
         </div>
         <div class="image-container">
             <img src="/assets/illustrations/login.svg">
