Implemented Github Authentication

--- a/src/frontend/src/app/components/auth/login/login.component.html
+++ b/src/frontend/src/app/components/auth/login/login.component.html
@@ -16,8 +16,14 @@
             </form>
             <button class="login-google" mat-stroked-button (click)="onLoginGoogle()">
                 <mat-icon style="width: 50px; height:30px"
-              svgIcon="logo"></mat-icon>
-                Login with google</button>
+              svgIcon="logoGoogle"></mat-icon>
+                Login with google
+            </button>
+            <button class="login-github" mat-stroked-button (click)="onLoginGithub()">
+                <mat-icon style="width: 50px; height:30px"
+              svgIcon="logoGithub"></mat-icon>
+                Login with github
+            </button>
         </div>
         <div class="image-container">
             <img src="/assets/illustrations/login.svg">
