--- a/src/frontend/src/app/app.component.scss
+++ b/src/frontend/src/app/app.component.scss
@@ -1,6 +1,7 @@
 @import '~@angular/material/theming';
 @import 'src/custom-theme.scss';
 
+
 .app-container{
     display: flex;
     flex-flow: column;
@@ -20,4 +21,49 @@
 
 .router-container{
     flex: 1 1 auto;
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 3px 2%;
+    background-color: $color-background;
+    color: $color-foreground;
+    font-size: 14px;
+}
+
+
+.logo-title{
+    font-family: 'Days One', sans-serif;
+    cursor: pointer;
+    margin: 0 !important;
+    font-size: 18px;
+}
+
+.nav-links{
+    list-style: none;
+}
+
+.nav-links li{
+    display: inline-block;
+    padding: 0px 20px;
+}
+
+.nav-button{
+    margin: 0 5px;
+    min-width: 100px;
+}
+
+.nav-user-container{
+    color: $color-foreground;
+    display: flex;
+    min-height: 60%;
+    min-width: 50px;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    padding: 5px 20px;
+    border-radius: 5px;
+    cursor: pointer;
 }
