Created shared styles and login external files for auth components Register component UI improved

--- a/src/frontend/src/app/components/auth/login/login.component.html
+++ b/src/frontend/src/app/components/auth/login/login.component.html
@@ -17,13 +17,9 @@
                 </form>
             </div>
             <div class="input-separator">
-                <div class="separator-bar">
-
-                </div>
+                <div class="separator-bar"></div>
                 <p>OR</p>
-                <div class="separator-bar">
-
-                </div>
+                <div class="separator-bar"></div>
             </div>
             <div class="input-external">
                 <button class="login-external-button" mat-stroked-button (click)="onLoginGoogle()">
