--- a/src/frontend/src/app/components/auth/register/register.component.scss
+++ b/src/frontend/src/app/components/auth/register/register.component.scss
@@ -1,5 +1,6 @@
 @import '~@angular/material/theming';
 @import 'src/custom-theme.scss';
+@import '../shared-styles.scss';
 
 /*$primary: map-get($deepscheduler-frontend-theme, primary);*/
 
@@ -12,24 +13,11 @@
 }
 
 .register-card{
-    height: 60%;
+    height: 40%;
     width: 50%;
     display: flex;
     flex-direction: row;
     border-radius: 10px;
-}
-
-.image-container{
-    width: 60%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.image-container img{
-    height: 70%;
-    width: 70%;
 }
 
 .form-container{
