Login with gitlab completed, deployed to k8s

--- a/src/frontend/src/app/components/auth/login/login.component.html
+++ b/src/frontend/src/app/components/auth/login/login.component.html
@@ -34,6 +34,12 @@
                         <span>Login with Github</span>
                     </div>    
                 </button>
+                <button class="login-external-button" style="background-color: #fc6d26; color: white;" mat-stroked-button (click)="onLoginGitlab()">
+                    <div class="login-external-button-content">
+                        <img src="/assets/imgs/logoGitlab.png"/>
+                        <span>Login with Gitlab</span>
+                    </div>    
+                </button>
             </div> 
         </div>   
     </mat-card>
