--- a/src/frontend/src/app/app.component.scss
+++ b/src/frontend/src/app/app.component.scss
@@ -64,6 +64,61 @@ header{
     justify-content: center;
     font-size: 16px;
     padding: 5px 20px;
-    border-radius: 5px;
+    border-radius: 20px;
     cursor: pointer;
+    border: 1px solid $color-primary;
+}
+
+.dropdown{
+    position: relative;
+}
+
+.dropdown-menu{
+    position: absolute;
+    right: -20px;
+    min-width: 180px;
+    top: calc(100% + .75rem);
+    background-color: $color-background;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 15px;
+    border: 1px solid $color-foreground;
+    //border: 2px solid $color-foreground;
+    //border-radius: 10px;
+}
+
+.visibility{
+    display: none;
+}
+
+.dropdown-menu ul{
+    list-style: none;
+    padding: 0 !important;
+}
+
+.dropdown-menu ul li{
+    padding: 5px;
+    display: flex;
+    cursor: pointer;
+} 
+
+.dropdown-menu ul li:not(:last-child){
+    border-bottom: 1px solid rgba($color: $color-foreground, $alpha: 0.5);
+    margin-bottom: 5px;
+}
+
+.dropdown-menu ul li img{
+    max-width: 22px;
+    margin-right: 10px;
+    opacity: 0.8;
+    color: $color-primary;
+}
+
+.dropdown-menu-separator{
+    background-color: rgba($color: $color-foreground, $alpha: 0.5);
+    height: 1px;
+    width: calc(100%+40px);
+    margin-right: -20px;
+    margin-left: -20px;
 }
