--- a/src/frontend/src/app/app.component.scss
+++ b/src/frontend/src/app/app.component.scss
@@ -67,6 +67,7 @@ header{
     border-radius: 20px;
     cursor: pointer;
     border: 1px solid $color-primary;
+    user-select: none;
 }
 
 .dropdown{
