--- a/src/frontend/src/app/components/auth/login/login.component.html
+++ b/src/frontend/src/app/components/auth/login/login.component.html
@@ -2,7 +2,7 @@
     <mat-card class="login-card">
         <div class="input-container">
             <div class="input-local">
-                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                <form [formGroup]="loginForm">
                     <mat-form-field appearance="outline">
                         <mat-label>Enter your username</mat-label>
                         <input matInput placeholder="username" required formControlName="username">
@@ -13,7 +13,7 @@
                         <input matInput type="password" required formControlName="password">
                         <mat-error>Error</mat-error>
                     </mat-form-field>
-                    <button mat-stroked-button type="submit">Login</button>
+                    <button mat-stroked-button type="submit" (click)="onSubmit()">Login</button>
                 </form>
             </div>
             <div class="input-separator">
