Frontend -> training home now shows user training requests

--- a/src/frontend/src/app/components/training/training-new/training-new.component.html
+++ b/src/frontend/src/app/components/training/training-new/training-new.component.html
@@ -2,7 +2,7 @@
     <div class="input-card" #inputImageName>
         <h2 class="input-card-title">Image repository name</h2>
         <form [formGroup]="imageNameForm">
-            <mat-form-field appearence="fill">
+            <mat-form-field class="input-card-image-field" appearence="fill">
                 <mat-label>Input</mat-label>
                 <input matInput placeholder="Placeholder" formControlName="imageName">
                 <!--<mat-hint>Hint</mat-hint>-->
