--- a/src/frontend/src/app/components/training/training-home/training-home.component.html
+++ b/src/frontend/src/app/components/training/training-home/training-home.component.html
@@ -12,13 +12,13 @@
             <!-- Position Column -->
             <ng-container matColumnDef="image">
               <th mat-header-cell *matHeaderCellDef> Image</th>
-              <td mat-cell *matCellDef="let element"> {{element.image}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.imageName}} </td>
             </ng-container>
           
             <!-- Name Column -->
-            <ng-container matColumnDef="state">
-              <th mat-header-cell *matHeaderCellDef> State </th>
-              <td mat-cell *matCellDef="let element"> {{element.state}} </td>
+            <ng-container matColumnDef="status">
+              <th mat-header-cell *matHeaderCellDef> Status </th>
+              <td mat-cell *matCellDef="let element"> {{element.status}} </td>
             </ng-container>
           
           
