--- a/src/frontend/src/app/components/training/training-home/training-home.component.scss
+++ b/src/frontend/src/app/components/training/training-home/training-home.component.scss
@@ -1,5 +1,6 @@
 @import '~@angular/material/theming';
 @import 'src/custom-theme.scss';
+@import '../shared-styles.scss';
 
 .training-container{
     height: 100%;
@@ -36,5 +37,36 @@
 
 table{
     width: 100%;
-
 }
+
+table tr:last-child td /*To remove the last border*/
+{
+  border-bottom:0 solid
+}
+
+.mat-table{
+    background-color: transparent;
+    border-radius: 20px;
+}
+
+.mat-header-cell{
+    color: $color-foreground;
+}
+
+.mat-cell{
+    color: $color-foreground;
+}
+
+.align-right{
+    text-align: end;
+}
+
+.status-cell{
+    //font-size: 14px;
+    border: 1px solid white;
+    padding: 5px 12px;
+    border-radius: 17px;
+}
+
+
+
