--- a/src/frontend/src/custom-theme.scss
+++ b/src/frontend/src/custom-theme.scss
@@ -80,4 +80,5 @@ $color-background-hover: #44464e;
 $color-foreground: #e9e9e9;
 $color-foreground-hover: rgb(233, 233, 233, 0.8);
 $color-background-general: #38383a;
+$color-background-general-hover: #4d4d4e;
 
