Completed computing time stored in database. Need to add "ERROR" status in case of error pulling image.

--- a/src/frontend/src/app/components/user/profile/profile.component.html
+++ b/src/frontend/src/app/components/user/profile/profile.component.html
@@ -18,7 +18,7 @@
             <div class="profile-content-stats-data">
                 <h1>Stats</h1>
                 <p class="profile-content-stats-data-row">{{statsData.totalContainers}} containers executed</p>
-                <p class="profile-content-stats-data-row">{{statsData.totalHours}} hours</p>
+                <p class="profile-content-stats-data-row">{{statsData.totalHours}}+ hours</p>
             </div>
             <div class="profile-content-stats-chart">
                 <ngx-charts-pie-chart *ngIf="statsData.totalContainers > 0"
