Implemented results download. Need to improve UI

--- a/src/frontend/src/app/components/training/training-detail/training-detail.component.html
+++ b/src/frontend/src/app/components/training/training-detail/training-detail.component.html
@@ -14,7 +14,7 @@
             </div>
             <div class="card-status-data">
                 <div *ngIf="data.status == 'COMPLETED'" class="card-status-data-completed">
-                    <h1>TEST</h1>
+                    <button (click)="getTrainingRequestResults()">Download results</button>
                 </div> 
             </div>
         </div>                
